@startuml name
!theme plain
hide circle
skinparam linetype ortho

' --- KONFIGURACJA WYGLĄDU ---
skinparam packageStyle rectangle

' ========================================
' 1. SŁOWNIKI
' ========================================
package "Slowniki" {
  entity "Parafia" as parafia {
    *id : PK
    --
    *nazwa : varchar
    miejscowosc : varchar
    diecezja : varchar
  }

  entity "Duchowny" as duchowny {
    *id : PK
    --
    *imie_nazwisko : varchar
    tytul : varchar
    parafia_id : FK
  }

  entity "Wyznanie" as wyznanie {
    *id : PK
    --
    *nazwa : varchar
  }
}

' ========================================
' 2. OSOBY I RODZINY
' ========================================
package "Osoby i Rodziny" {
  entity "Osoba" as osoba {
    *id : PK
    --
    *nazwisko : varchar
    *imie_pierwsze : varchar
    *data_urodzenia : date
    data_zgonu : date
    wyznanie_id : FK
  }

  entity "Rodzina" as rodzina {
    *id : PK
    --
    *nazwa : varchar
    ulica : varchar
    miejscowosc : varchar
  }

  entity "CzlonkostwoRodziny" as czlonkostwo {
    *id : PK
    --
    *rodzina_id : FK
    *osoba_id : FK
    rola : varchar
  }

  entity "WizytaDuszpasterska" as koleda {
    *id : PK
    --
    *rodzina_id : FK
    ksiadz_id : FK
    rok : int
    status : varchar
  }
}

' ========================================
' 3. SAKRAMENTY
' ========================================
package "Sakramenty" {
  entity "Chrzest" as chrzest {
    *id : PK
    --
    *ochrzczony_id : FK
    parafia_id : FK
    ojciec_wyznanie_id : FK
    matka_wyznanie_id : FK
    rok : int
    akt_nr : varchar
  }

  entity "PierwszaKomunia" as komunia {
    *id : PK
    --
    *osoba_id : FK
    parafia_id : FK
    rok : varchar
  }

  entity "Bierzmowanie" as bierzmowanie {
    *id : PK
    --
    *osoba_id : FK
    parafia_id : FK
    szafarz_id : FK
    rok : varchar
    akt_nr : varchar
  }

  entity "Malzenstwo" as malzenstwo {
    *id : PK
    --
    *malzonek_a_id : FK
    *malzonek_b_id : FK
    parafia_id : FK
    swiadek_urzedowy_id : FK
    rok : varchar
    akt_nr : varchar
  }

  entity "NamaszczenieChorych" as namaszczenie {
    *id : PK
    --
    *osoba_id : FK
    szafarz_id : FK
    data : date
  }

  entity "Zgon" as zgon {
    *id : PK
    --
    *osoba_id : FK (OneToOne)
    grob_id : FK
    rok : varchar
    akt_nr : varchar
  }
}

' ========================================
' 4. CMENTARZ
' ========================================
package "Cmentarz" {
  entity "Sektor" as sektor {
    *id : PK
    --
    *nazwa : varchar
  }

  entity "Grob" as grob {
    *id : PK
    --
    *sektor_id : FK
    dysponent_id : FK
    numer : varchar
    typ : varchar
    wazny_do : date
  }

  entity "Pochowany" as pochowany {
    *id : PK
    --
    *grob_id : FK
    *osoba_id : FK
    data_pochowania : date
  }
}

' ========================================
' 5. SYSTEM / KONTA
' ========================================
package "System" {
  entity "User" as user {
    *id : PK
    --
    (Django Auth)
  }

  entity "Profil" as profil {
    *id : PK
    --
    *uzytkownik_id : FK (OneToOne)
    rola : varchar
  }

  entity "LogAkcji" as log {
    *id : PK
    --
    uzytkownik_id : FK
    akcja : varchar
    kiedy : datetime
  }
  
  entity "BackupUstawienia" as backup {
    *id : PK
    --
    czestotliwosc : varchar
  }
}

' ========================================
' RELACJE (Klucze obce)
' ========================================

' --- Slowniki & Osoby ---
duchowny }|..|| parafia
osoba }|..|| wyznanie

' --- Rodziny ---
rodzina ||..|{ czlonkostwo
osoba ||..|{ czlonkostwo
rodzina ||..|{ koleda
koleda }|..|| duchowny

' --- Sakramenty ---
osoba ||..|{ chrzest : "ochrzczony"
chrzest }|..|| parafia
chrzest }|..|| wyznanie : "rodzice"

osoba ||..|{ komunia
komunia }|..|| parafia

osoba ||..|{ bierzmowanie
bierzmowanie }|..|| parafia
bierzmowanie }|..|| duchowny : "szafarz"

osoba ||..|{ malzenstwo : "malzonek A"
osoba ||..|{ malzenstwo : "malzonek B"
malzenstwo }|..|| parafia
malzenstwo }|..|| duchowny : "świadek"

osoba ||..|{ namaszczenie
namaszczenie }|..|| duchowny

osoba ||--|| zgon : "1:1"
zgon }|..|| grob

' --- Cmentarz ---
sektor ||..|{ grob
grob }|..|| osoba : "dysponent"
grob ||..|{ pochowany
osoba ||..|{ pochowany

' --- System ---
user ||--|| profil : "1:1"
user ||..|{ log

@enduml